--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Visual Studio Code files
+.vscode/*
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
 # Prerequisites
 *.d
 
